[project]
name = "2024"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
  "jupyterlab==4.3.2",
  "kagglehub==0.3.4",
  "numpy==2.1.3",
  "openai==1.55.0",
  "pandas==2.2.3",
  "scikit-learn==1.5.2",
  "tiktoken==0.8.0",
  "torch==2.5.1",
  "tqdm==4.67.0",
  "transformers==4.47.0",
]
